Version 5.0.1.8
===============

* 2016-02-??
 - added R-like solve() method;
 - fixed constructor from i, j, v triplicate;

Version 5.0.1.7
===============

* 2016-01-20
 - INTEGER type is compiled as int32 and not int64 as in previous version;
 - fixed a typo in inst/example.R;
 - fixed some building issues on all platforms (all reported by Prof. Brian Ripley):
  + no more cmake is needed on Linux and Mac OS;
  + no more sources kept in binary package;
  + MAKE env. variable is respected now;
  + explicit mention of gcc is removed;
  + /bin/rm is replaced by $(RM);
  + fixed a non initialized variable use in C++ code;
  + a .a prefix is used for static library on Windows instead of .dll;
 - fixed the use of default values in constructors which are ignored by
   RcppModule (detected by UBSAN test run by R-core team);

Version 5.0.1.4
===============

* 2015-12-17
 - initial release. Provides solve(), numeric() and symbolic() methods
