@@ -1,3 +1,9 @@
 useDynLib(rmumps)
 exportPattern("^[[:alpha:]]+")
 import(methods, Rcpp)
+S3method(solve, Rcpp_Rmumps)
+S3method(dim, Rcpp_Rmumps)
+S3method(nrow, Rcpp_Rmumps)
+S3method(ncol, Rcpp_Rmumps)
+S3method(show, Rcpp_Rmumps)
+S3method(print, Rcpp_Rmumps)
