@@ -1,5 +1,6 @@
 library(testthat)
 library(rmumps)
 library(Matrix)
+library(slam)
 
 test_check("rmumps")
