@@ -27,6 +27,24 @@ xi=solve(ai, b)
 test_that("testing a from i,j,v", {
   expect_equal(xi, 1:n)
 })
+rm(ai)
+
+# test matrix creation from slam::simple_triplet_matrix
+asl=as.simple_triplet_matrix(a)
+ai=Rmumps$new(asl)
+xi=solve(ai, b)
+test_that("testing a from slam::simple_triplet_matrix", {
+  expect_equal(xi, 1:n)
+})
+rm(asl)
+
+# test sparse rhs as slam::simple_triplet_matrix
+asl=as.simple_triplet_matrix(a)
+eye=solve(ai, asl)
+test_that("testing solve() on slam::simple_triplet_matrix", {
+  expect_equal(eye, diag(n), tol=1e-14)
+})
+rm(ai, asl)
 
 # test error signaling on singular matrix
 rm(am)
@@ -35,3 +53,4 @@ am=Rmumps$new(a)
 test_that("singular matrix", {
   expect_error(solve(am, b), "*rmumps: info\\[1\\]=-10*")
 })
+rm(a, am)
